# kalgan

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
scaffolding/: routes.yaml  settings.yaml
scaffolding/src/: controller.rs.bak  macros.rs.bak
scaffolding/template/: hello_world.html
src/: lib.rs  settings.rs  template.rs
src/handler/: asset.rs  controller.rs  error.rs  middleware.rs  resolver.rs
src/http/: request.rs  response.rs
src/server/: tcp_listener.rs  thread_pool.rs  worker.rs
src/service/: csrf.rs  db.rs  i18n.rs  mailer.rs  password.rs  token.rs  url.rs
src/storage/: cookie.rs  session.rs
template/: error.html
tests/mock/: routes.yaml  settings.yaml
tests/mock/i18n/en/: messages.yaml
tests/mock/template/: error.html  hello_world.html
